modal color visibility fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -332,7 +332,7 @@ h4 {
 .btn-inverted {
     background-color: transparent;
     border: 4px solid #{{ site.color.andeanwhite }}; 
-    color: #{{ site.color.andeanwhite}};
+    color: #{{ sitrace.color.andeanwhite}};
     font-weight: 900;
     text-transform: uppercase;
 }
@@ -1058,13 +1058,13 @@ ul.social-buttons li a:active {
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 3px;
-    color: #{{ site.color.andeanwhite }};
+    color: white;
     font-weight: 600;
 }
 
 .track-modal .modal-content h4 {
     text-align: left;
-    color: #{{ site.color.andeanwhite }};
+    color: white;
 }
 
 .track-modal .modal-content p {
@@ -1072,7 +1072,7 @@ ul.social-buttons li a:active {
     text-align: left;
     font-size: 20px;
     font-weight: 200;
-    color: #{{ site.color.andeanwhite }};
+    color: white;
     letter-spacing: 0px;
 }
 
@@ -1105,7 +1105,7 @@ ul.social-buttons li a:active {
     width: 5px;
     height: 75px;
     margin-left: 35px;
-    background-color: #{{ site.color.andeanwhite }};
+    background-color: white;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -1115,7 +1115,7 @@ ul.social-buttons li a:active {
     z-index: 1052;
     width: 5px;
     height: 75px;
-    background-color: #{{ site.color.andeanwhite }};
+    background-color: white;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
